--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 /* src/styles.css */
+/* styles.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #f9f9f9;
-  color: #333;
+  background-color: #202424;
+  color: #F4F1E3;
 }
 
 a {
@@ -15,3 +19,13 @@ a {
   box-sizing: border-box;
 }
   
+@font-face {
+  font-family: 'Emotion';
+  src: url('./fonts/Creating\ Emotion\ Demo.ttf') format('truetype'); /* Adjust format as needed */
+  font-weight: normal;
+  font-style: normal;
+}
+/* hide crollbar */
+::-webkit-scrollbar {
+  display: none;
+}
