--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,8 +16,29 @@
   font-size: 1.5rem;
   font-weight: bold;
   color: #FFFFFF;
-  padding-top: 10px;
   z-index: 1000;
+  display: flex;
+  align-items: center;
+}
+
+/* About link styling */
+.navbar-about {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navbar-about a {
+  font-size: 1rem;
+  color: #FFFFFF;
+  text-decoration: none;
+  font-family: 'CustomFont', sans-serif;
+  font-weight: none;
+}
+
+.navbar-about a:hover {
+  color: #f9e7c5;
 }
 
 /* Burger menu styling */
@@ -28,6 +49,7 @@
   gap: 5px;
   padding: 10px;
   z-index: 1100;
+  align-items: center;
 }
 
 .burger .bar {
@@ -58,7 +80,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  display: flex; /* Use flex to center content */
+  display: flex;
   align-items: center; /* Center vertically */
   justify-content: center; /* Center horizontally */
   opacity: 0;
