Add custom font, update Navbar links, and enhance animated sections with new flower and beehive animations

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,13 @@ a {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Widom';
+  src: url(./fonts/WisdomWordsPersonalUse-r9E9.ttf) format('truetype'); /* Adjust format as needed */
+  font-weight: normal;
+  font-style: normal;
+}
+
   /*hidden scrollbar*/
 ::-webkit-scrollbar {
   display: none;
